# huffman

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt  code.cpp  code.h  code_word.cpp  code_word.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  frequency.cpp  frequency.h  gtest.cmake  huffman_tree.cpp  huffman_tree.h  test.cpp
src/: CMakeLists.txt  compressor.cpp  compressor.h  main.cpp
